# plog

./: .appveyor.yml  .cirrus.yml  .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md  SECURITY.md  appveyor.yml  library.json  plog-config.cmake  plog.nuspec  plog.targets
.circleci/: config.yml
.github/workflows/: build.yml  ci.yml  nuget.yml
include/plog/: Appender.h  Compatibility.h  ConsoleAppender.h  CsvFormatter.h  Default.h  Entry.h  FileAppender.h  Init.h  Level.h  Log.h  Logger.h  LoggerHolder.h  Record.h  RollingFileAppender.h  Severity.h  TxtFormatter.h  Util.h  WinApi.h
include/plog/Appenders/: AndroidAppender.h  Appender.h  ColorConsoleAppender.h  ConsoleAppender.h  DebugOutputAppender.h  DynamicAppender.h  EventLogAppender.h  FileAppender.h  IAppender.h  MutexedConsoleAppender.h  RollingDateFileAppender.h  RollingFileAppender.h  SyslogAppender.h  WinEventLogAppender.h
include/plog/Converters/: DummyConverter.h  NativeEOLConverter.h  UTF8Converter.h
include/plog/Formatters/: ColoredTxtFormatter.h  CsvFormatter.h  FuncMessageFormatter.h  MessageOnlyFormatter.h  SyslogFormatter.h  TxtFormatter.h  WhereWhatFormatter.h
include/plog/Helpers/: AscDump.h  HexDump.h
include/plog/Initializers/: ConsoleInitializer.h  RollingFileInitializer.h
pom/include/: assembly.xml  pom.xml
samples/: CMakeLists.txt  sample.cpp
samples/Android/: CMakeLists.txt
samples/Android/AndroidJNI/: Main.cpp
samples/Android/AndroidNative/: Main.cpp
samples/Android/jni/: Android.mk  Application.mk  Sample.cpp
samples/AndroidCmake/: CMakeLists.txt  Main.cpp
samples/Arduino/: platformio.ini
samples/Arduino/src/: main.cpp
samples/AscDump/: CMakeLists.txt  Main.cpp
samples/CXX11/: CMakeLists.txt  Main.cpp
samples/CXX17/: CMakeLists.txt  Main.cpp
samples/Chained/: CMakeLists.txt
samples/Chained/ChainedApp/: Main.cpp
samples/Chained/ChainedLib/: Export.def  Main.cpp
samples/ColorConsole/: CMakeLists.txt  Main.cpp
samples/Container/: CMakeLists.txt  Main.cpp
samples/CustomAppender/: CMakeLists.txt  Main.cpp
samples/CustomConverter/: CMakeLists.txt  Main.cpp
samples/CustomFormatter/: CMakeLists.txt  Main.cpp
samples/CustomType/: CMakeLists.txt  Main.cpp
samples/DebugOutput/: CMakeLists.txt  Main.cpp
samples/Demo/: CMakeLists.txt  Customer.h  Main.cpp  MyClass.cpp  MyClass.h
samples/DisableLogging/: CMakeLists.txt  Main.cpp
samples/Dynamic/: CMakeLists.txt  Main.cpp
samples/Dynamic11/: CMakeLists.txt  Main.cpp
samples/DynamicAppender/: CMakeLists.txt  Main.cpp
samples/EventLog/: CMakeLists.txt  Main.cpp
samples/Facilities/: CMakeLists.txt  Main.cpp
samples/FreeRTOS/: CMakeLists.txt  main.cpp
samples/FreeRTOS/freertos_config/: CMakeLists.txt  FreeRTOSConfig.h
samples/Hello/: CMakeLists.txt  Main.cpp
samples/HexDump/: CMakeLists.txt  Main.cpp
samples/MessagePrefix/: CMakeLists.txt  Main.cpp
samples/MultiAppender/: CMakeLists.txt  Main.cpp
samples/MultiAppenderFilter/: CMakeLists.txt  Main.cpp
samples/MultiInstance/: CMakeLists.txt  Main.cpp
samples/NativeEOL/: CMakeLists.txt  Main.cpp
samples/NotShared/: CMakeLists.txt
samples/NotShared/NotSharedApp/: Main.cpp
samples/NotShared/NotSharedLib1/: Main.cpp
samples/NotShared/NotSharedLib2/: Main.cpp
samples/ObjectiveC/: CMakeLists.txt  Main.mm
samples/Path/: CMakeLists.txt  Main.cpp
samples/Performance/: CMakeLists.txt  Main.cpp
samples/PrintVar/: CMakeLists.txt  Main.cpp
samples/RollingDateFileAppender/: CMakeLists.txt  Main.cpp
samples/SetFileName/: CMakeLists.txt  Main.cpp
samples/Shared/: CMakeLists.txt
samples/Shared/SharedApp/: Main.cpp
samples/Shared/SharedLib/: Main.cpp
samples/Shared/SharedLib1/: Main.cpp
samples/Shared/SharedLib2/: Main.cpp
samples/Simple/: Main.cpp  MyClass.cpp
samples/SkipNativeEOL/: CMakeLists.txt  Main.cpp
samples/Syslog/: CMakeLists.txt  Main.cpp
samples/UtcTime/: CMakeLists.txt  Main.cpp
samples/Utf8Everywhere/: CMakeLists.txt  Main.cpp
samples/hello/: Main.cpp
samples/intro/: Main.cpp
samples/multi/: Main.cpp
samples/simple/: Main.cpp  MyClass.cpp
test/: CMakeLists.txt  CastToString.cpp  Common.h  Conditional.cpp  FunctionNameDisabled.cpp  FunctionNameEnabled.cpp  Main.cpp  MessagePrefix.cpp  NullCharPointer.cpp  Path.cpp  Printf.cpp  SimpleTypes.cpp  StdContainers.cpp  StdManipulators.cpp  StdStreamable.cpp  StringTypes.cpp  TestAppender.h
