if (CMAKE_VERSION VERSION_GREATER 3.1.0)
    if ((CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0) OR (MSVC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.10))
        add_executable(Path Main.cpp)
        target_link_libraries(Path plog)
        set_target_properties(Path PROPERTIES FOLDER Samples)
        set_target_properties(Path PROPERTIES CXX_STANDARD 17)
        if (MSVC)
            target_compile_options(Path PRIVATE "/permissive-") # enable conformance mode to be more strict
        endif()
        if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0 AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
            target_link_libraries(Path stdc++fs)
        endif()
    endif()
endif()
